fix z-index filter product

--- a/src/components/FilterProduct/filter.scss
+++ b/src/components/FilterProduct/filter.scss
@@ -1,7 +1,7 @@
 .filter-back {
     position: fixed;
     inset: 0;
-    z-index: 9999;
+    z-index: 1000000;
     background-color: rgba(0, 0, 0, 0.7);
     display: none;
     @media only screen and (max-width: 1024px) {
