--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,7 +3,7 @@
     background: #ffffff;
     position: relative;
 
-    z-index: 9999999;
+    z-index: 999999;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
     .container {
         height: 100%;
